# netbox-prtg

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md
netbox_prtg/: __init__.py  forms.py  models.py  navigation.py  prtg_client.py  urls.py  views.py  widgets.py
netbox_prtg/migrations/: 0001_initial.py
netbox_prtg/templates/netbox_prtg/: device_tab.html  settings.html
netbox_prtg/templates/netbox_prtg/widgets/: prtg_status.html
screenshots/: README.md
